[build-system]
requires = ["Cython>=0.15.1", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"


# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = ["--disable-warnings", "--doctest-modules"]
log_cli = true

# Black formatting
[tool.black]
line-length = 79


# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true
virtual_env = ".venv"
