[metadata]
name = autorad
version = 0.2.4
author = Piotr Woznicki
author_email = piotr.a.woznicki@gmail.com
packages = ['autorad']
description = Radiomics-related modules for extraction and experimenting
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache 2.0
url = https://github.com/pwoznicki/AutoRadiomics
project_urls =
   Bug Tracker = https://github.com/pwoznicki/AutoRadiomics
classifiers =
   Programming Language :: Python :: 3
   Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:

[options.packages.find]
where=autorad
